--- a/index.html
+++ b/index.html
@@ -65,24 +65,65 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                      Duis lectus orci, sagittis sed neque eget, sollicitudin 
                      convallis ante. Ut tincidunt ante eget nulla commodo congue.
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                     Duis lectus orci, sagittis sed neque eget, sollicitudin 
+                     convallis ante. Ut tincidunt ante eget nulla commodo congue.
                 </p>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                     Duis lectus orci, sagittis sed neque eget, sollicitudin 
+                     convallis ante. Ut tincidunt ante eget nulla commodo congue.
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                     Duis lectus orci, sagittis sed neque eget, sollicitudin 
+                     convallis ante. Ut tincidunt ante eget nulla commodo congue.
+                </p>
+
             </div>
 
         </div>
         <div id="area-lateral">
 
             <div class="conteudo">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                     Duis lectus orci, sagittis sed neque eget, sollicitudin 
-                     convallis ante. Ut tincidunt ante eget nulla commodo congue.
-                </p>
+                
+                <ul id="beneficios">
+
+                    <li>
+                        <a href="">
+                            <img src="assets/imagens/apartamento.jpg" width="150px" alt="apartamento">
+                            <h3>Apartamento</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Duis lectus orci, sagittis sed neque eget, sollicitudin</p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <img src="assets/imagens/restaurante.jpg" width="150px" alt="restaurante">
+                            <h3>Restaurante</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Duis lectus orci, sagittis sed neque eget, sollicitudin</p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <img src="assets/imagens/piscina.jpg" width="150px" alt="piscina">
+                            <h3>Piscina</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Duis lectus orci, sagittis sed neque eget, sollicitudin</p>
+                        </a>
+                    </li>
+                </ul>
+
             </div>
 
         </div>
 
-        <div id="rodape" style="clear: both;">
-            R 
+        <div id="rodape">
+            <span>
+                &copy; Copyright 2000-2021 Chalé Hotel
+            </span>
         </div>
     </div>
 </body>
